# svd_compare

./: CMakeLists.txt  README.md  cuda_svd.cpp  cuda_svd.h  main.cpp  plane_linear.cpp  plane_linear.h
